--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.2.1"
+        "@fortawesome/fontawesome-free": "^6.2.1",
+        "filepond": "^4.30.4"
     }
 }
